--- a/frontend/src/app/components/add-post/add-post.component.html
+++ b/frontend/src/app/components/add-post/add-post.component.html
@@ -12,7 +12,7 @@
       <!-- <mat-error *ngIf="form.get('location').invalid">Please enter a location</mat-error> -->
     <!-- </mat-form-field> -->
 
-    <app-city-search (locationAdded)='onAddLocation($event)' [getFakeCenterCity]='true'>
+    <app-city-search (locationAdded)='onAddLocation($event)' [getFakeCenterCity]='true' [placeholder]='"Region"'>
     </app-city-search>
 
     <mat-form-field>
