--- a/frontend/src/app/components/display-posts/display-posts.component.html
+++ b/frontend/src/app/components/display-posts/display-posts.component.html
@@ -8,8 +8,8 @@
         <mat-card-title>{{ post.author }}</mat-card-title>
         <mat-card-subtitle>Premium User</mat-card-subtitle>
         <div class='authorButtons'>
-          <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
-          <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+          <a mat-button color="primary" [routerLink]="['/edit', post._id]">EDIT</a>
+          <button mat-button color="warn" (click)="onDelete(post._id)">DELETE</button>
         </div>
       </mat-card-header>
       <h1>
@@ -24,11 +24,11 @@
       <img mat-card-image [src]="post.imagePath" [alt]="post.title">
 
       <mat-card-actions>
-        <button mat-button type="button" (click)="like(post.id)" (mousedown)="mousedown()" (mouseup)="mouseup()" (mouseleave)="mouseup()" matTooltip='{{post.likes}}'>LIKE {{ post.likes.length }}</button>
+        <button mat-button type="button" (click)="like(post._id)" (mousedown)="mousedown()" (mouseup)="mouseup()" (mouseleave)="mouseup()" matTooltip='{{post.likes}}'>LIKE {{ post.likes.length }}</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
       <!-- <div *ngIf="likeShow">{{post.likes}}</div> -->
-  
+
       <app-comment-section [post] ='post'></app-comment-section>
     </mat-card>
 
