--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -148,7 +148,7 @@
                                 </mat-expansion-panel-header>
                                 <div class="row container-fluid">
                                     <mat-chip-list>
-                                        <mat-chip color="primary" selected>Distance Traveled: avaaf km</mat-chip>
+                                        <mat-chip color="primary" selected>Distance Traveled: {{getTripDistance(i)}} km</mat-chip>
                                         <mat-chip color="warn" selected>Places Visited: {{getTotalVenues(trip)}}</mat-chip>
                                         <mat-chip color="accent" selected>Price: {{getTotalPrice(trip)}}$</mat-chip>
                                     </mat-chip-list>
